[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Lukasz <lukasz.kniola@gmail.com>"]
description = ""
name = "subjidhash"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
tabulate = "^0.8.6"
[tool.poetry.dev-dependencies]
